# cloudteamisgreat

./: README.md  note.txt  pyproject.toml
src/cloudteamisgreat/: MANIFEST.in  __init__.py  main.py  setup.py  util.py  version.py
src/cloudteamisgreat.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/cloudteamisgreat/cli/: config.py  user.py
src/cloudteamisgreat/yaml/: logging.yaml
