[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudteamisgreat"
authors = [
    {name = "WeiYu", email = "wychen@narlabs.org.tw"},
]
version = "0.0.1c"
description = "cloudteamisgreat"
readme = "README.md"
requires-python = ">=3.6"
keywords = ["ckan"]
license = {text = "apache2"}
classifiers = [
    "Topic :: Database :: Front-Ends",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "ckanapi",
    "requests",
    "configparser",
    "click",
    "PyYAML",
    "terminaltables",
]

[project.scripts]
cloudteamisgreat = "cloudteamisgreat.main:cli"
