[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudteamisgreat"
authors = [
    {name = "WeiYu", email = "wychen@narlabs.org.tw"},
]
version = "0.0.2"
description = "cloudteamisgreat"
readme = "README.md"
requires-python = ">=3.6"
keywords = ["ckan"]
license = {text = "apache2"}
classifiers = [
    "Topic :: Database :: Front-Ends",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "requests",
    "configparser",
]

[project.scripts]
cloudteamisgreat = "cloudteamisgreat.main:start"
